--- a/components/nav/nav.wxml
+++ b/components/nav/nav.wxml
@@ -1,6 +1,13 @@
 <!--components/nav/nav.wxml-->
 <view class="nav" enable-flex>
-  <view class="nav-item"  wx:for="{{navList}}" wx:key="index">
+  <view 
+  class="nav-item"
+  wx:for="{{navList}}" 
+  wx:key="index"
+  bindtap="headlerOnline"
+  data-name="{{item.name}}"
+  data-path="{{item.path}}"
+  >
     <image class="nav-icon" src="{{item.icon}}" />
     <text class="nav-text">{{item.title}}</text>
   </view>
